--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "chhay lihour",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongoose": "^9.1.2",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "qs": "^6.14.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
